# chronostore

./: Cargo.toml  README.md  taplo.toml
.github/: copyright.sh
.github/workflows/: ci.yml
benchmarks/wind_tunnel/: Cargo.toml  README.md
benchmarks/wind_tunnel/benches/: chronology.rs
benchmarks/wind_tunnel/src/: lib.rs
crates/chronostore/: Cargo.toml
crates/chronostore/src/: entry.rs  envelope.rs  lib.rs  lttb.rs  null_summary.rs  simple_summary.rs  stats_summary.rs  summary.rs  tests.rs
crates/chronostore/src/chronology/: chunk.rs  codec.rs  mod.rs  range_summary.rs  retention.rs  summary_node.rs
src/: chronology.rs  entry.rs  envelope.rs  lib.rs  lttb.rs  null_summary.rs  simple_summary.rs  stats_summary.rs  summary.rs  tests.rs
src/chronology/: chunk.rs  codec.rs  mod.rs  range_summary.rs  retention.rs  summary_node.rs
