[workspace]
resolver = "2"
members = [
    "benchmarks/wind_tunnel",
    "crates/chronostore",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/endoli/chronostore.rs"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
allow_attributes = "warn"
doc_markdown = "warn"

[workspace.dependencies]
chronostore = { path = "crates/chronostore" }
