[package]
name = "wind_tunnel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Criterion wind tunnel benchmarks for Chronostore"

[dependencies]
chronostore = { path = "../.." }

[[bench]]
name = "chronology"
harness = false

[dev-dependencies]
criterion = { default-features = false, features = ["cargo_bench_support"], version = "0.8.2" }
