[package]
name = "wind_tunnel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Criterion wind tunnel benchmarks for Chronostore"

[dependencies]
chronostore.workspace = true

[[bench]]
name = "chronology"
harness = false

[lints]
workspace = true

[dev-dependencies]
criterion = { default-features = false, features = ["cargo_bench_support"], version = "0.8.2" }
